--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,7 +27,7 @@ jobs:
         run: npm run dist
 
       - name: Upload build artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: windows-build
-          path: dist/**
+        uses: actions/upload-artifact@v4
+  with:
+    name: build
+    path: dist/*
